2003-01-08  Mike Sperber <mike@xemacs.org>

	* console.h (CDFW_CONSOLE): Don't lead to a crash if we're dealing
	with a dead window/frame/device/console.

2002-12-20  Mike Sperber <mike@xemacs.org>

	* ui-gtk.c: Fix typo from Ben's patch: emacs_ffi_data is a
	typedef, not a struct.  emacs_gtk_object_data is a typedef, not a
	struct.
	

	* gtk-glue.c (gdk_event_to_emacs_event): Fix typos from Ben's
	patch: le -> emacs_event + rearrange the code.

	* event-gtk.c (gtk_event_to_emacs_event): Fix typos from Ben's
	patch: ..._UNDERLYING_GDK_EVENT -> ..._GDK_EVENT, ev -> key_event.

	* device-gtk.c: Fix typo from Ben's patch: x_keysym_map_hash_table
	-> x_keysym_map_hashtable.

2002-12-19  Mike Sperber <mike@xemacs.org>

	* menubar-x.c (set_frame_menubar): Initialize protect_me field of
	popup_data.

2002-12-16  Ben Wing  <ben@xemacs.org>
	Major cleanup of KKCC, etc.

	KKCC, pdump-related:
	
	-- descriptions are written for all objects.  this required some
	   changes in the format of some objects, e.g. extents, popup-data,
	   coding system, lstream, lcrecord-list.
	-- KKCC now handles weakness in markers, hash tables, elsewhere
	   correctly (formerly, you'd eventually get a stack overflow due
	   to endlessly expanding markers).
	-- textual changes: lrecord_description -> memory_description,
	   struct_description -> sized_memory_description.
	-- extensive comment describing descriptions and pdump.
	-- redo XD_UNION so it works inline and change its format to provide
	   sufficient info for pdump.  implement XD_UNION in pdump.  also add
	   XD_UNION_DYNAMIC_SIZE, which works like XD_UNION except for when
	   auto-computing structure sizes.
	-- add support for XD_INDIRECT in description offsets (used by
	   extents).
	-- add support for "description maps", allowing for indirect
	   descriptions that are retrieved from an object at run-time.  this
	   generalizes XD_CODING_SYSTEM_END, XD_SPECIFIER_END, etc., which
	   have now been eliminated.